# pacta-cli

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  COPYRIGHT  Makefile  README.md  RELEASE_NOTES.md  action.yml  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: pr.yaml  publish.yaml  test-action.yml
docs/: architecture.md  ci-integration.md  cli.md  configuration.md  getting-started.md  rules.md  troubleshooting.md
docs/architecture/: index.md  v1.md  v2.md
docs/examples/: hexagonal-app.md  legacy-migration.md  microservices-platform.md  simple-layered-app.md
docs/stylesheets/: extra.css
examples/: README.md
examples/hexagonal-app/: README.md  architecture.yml  rules.pacta.yml
examples/legacy-migration/: README.md  architecture.yml  rules.pacta.yml
examples/microservices-platform/: README.md  architecture.yml  rules.pacta.yml
examples/simple-layered-app/: README.md  architecture.json  architecture.yml  rules.pacta.yml
pacta/: __init__.py  __main__.py  _version.py
pacta/analyzers/: __init__.py  python.py
pacta/cli/: __init__.py  _ascii_chart.py  _engine_adapter.py  _errors.py  _io.py  _mpl_chart.py  _trends.py  check.py  diff.py  exitcodes.py  history.py  main.py  scan.py  snapshot.py
pacta/core/: config.py  engine.py
pacta/ir/: __init__.py  index.py  keys.py  merge.py  normalize.py  select.py  types.py  validate.py
pacta/mapping/: __init__.py  enricher.py
pacta/model/: __init__.py  loader.py  resolver.py  types.py  validator.py
pacta/plugins/: __init__.py  registry.py
pacta/reporting/: __init__.py  _extract.py  _json.py  builder.py  keys.py  types.py
pacta/rules/: __init__.py  ast.py  baseline.py  dsl.py  (+8 more)
(+81 files in other folders)
